# test

./: Makefile  README.md  pyproject.toml
cookie/: __init__.py  dataset.py  features.py  plots.py
cookie/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: linear_regression_model.pkl
notebooks/: model.ipynb
